# decisive-stump-go-algo-2023

./: .drone.yml  README.dev.md  README.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.no-buildkit  README.md  docker-compose.yml  pyproject.toml
backend/src/ds_backend/: config.py  main.py
backend/src/ds_backend/db/: databases.py
backend/src/ds_backend/db/repositories/: portfolio.py  user.py
backend/src/ds_backend/db/repositories/news/: article.py  stock_info.py
backend/src/ds_backend/http/constants/: stock_action_recommendation_colors.py  stock_action_recommendation_mapping.py  stock_recommendation_colors.py
backend/src/ds_backend/http/routers/: auth.py  companies.py  news.py  portfolios.py  tickers.py  user.py
backend/src/ds_backend/http/schemas/: company.py  news.py  portfolio.py  stock_info.py  user.py  user_portfolio.py
backend/src/ds_backend/http/utils/: generate_stock_action_recommendation.py  stock_recommendation_color.py  user_signup_schema_to_user.py
backend/src/ds_backend/models/: portfolio.py  stock_info.py  user.py
backend/src/ds_backend/setup/: logging.py
backend/src/ds_backend/tests/http/utils/: test_snake_to_camel.py
frontend/: .metadata  Dockerfile  README.md  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/src/api/: app_api.dart  auth_api.dart
frontend/lib/src/common/: strings.dart
frontend/lib/src/repository/: app_repository.dart  auth_repository.dart  client_result.dart  repository.dart
frontend/lib/src/widgets/: graph_widget.dart  income_widget.dart  info_card.dart  (+1 more)
frontend/web/: index.html  manifest.json
ml/: Dockerfile  Dockerfile.no-buildkit  all_shares.csv  catsizes.pkl  main.py  pyproject.toml
ml/src/ds_ml/: Untitled.ipynb  comps_full.pkl  config.py  main.py
ml/src/ds_ml/constants/: tradestat.py
ml/src/ds_ml/db/: databases.py
ml/src/ds_ml/db/repositories/: tradestat.py
ml/src/ds_ml/http/models/: generic.py
ml/src/ds_ml/http/routers/: signals.py  tradestat.py
ml/src/ds_ml/http/utils/: tradestat.py
ml/src/ds_ml/libs/: preprocess.py  trade_bot.py
ml/src/ds_ml/libs/networks/: model.py
ml/src/ds_ml/models/: tradestat.py
news-parser/: Dockerfile  Dockerfile.no-buildkit  docker-compose.selenoid.yml  docker-compose.yml  pyproject.toml
news-parser/selenoid/: browsers.json
news-parser/src/ds_news_parser/: config.py  main.py
news-parser/src/ds_news_parser/db/: database.py
news-parser/src/ds_news_parser/db/repositories/: article.py  stock_info.py
news-parser/src/ds_news_parser/http/routers/: rbc.py
news-parser/src/ds_news_parser/http/routers/manual/: tickers.py
news-parser/src/ds_news_parser/http/utils/: snake_to_camel.py
news-parser/src/ds_news_parser/models/: article.py  stock_info.py
news-parser/src/ds_news_parser/parsers/: rbc_category.py  rbc_investments.py  rbc_investments_stocks.py
news-parser/src/ds_news_parser/setup/: webserver_port.py
(+110 files in other folders)
