[tool.poetry]
name = "decisive-stump-go-algo-2023-backend"
packages = [{include = "ds_backend", from="src"}]
version = "0.0.1"
description = ""
authors = ["0xb1b1 <hello@axelreitenbach.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.1"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"
pyhumps = "^3.8.0"
fastapi-jwt = "^0.2.0"
pydantic-mongo = "^2.0.3"
sentry-sdk = {extras = ["fastapi", "loguru", "pymongo"], version = "^1.38.0"}
requests = "^2.31.0"
bcrypt = "^4.1.1"
moexalgo = {extras = ["pandas"], version = "^1.0.1"}

[tool.poetry.scripts]
start = "ds_backend.main:run"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
