[tool.poetry]
name = "decisive-stump-go-algo-2023-news-parser"
packages = [{include = "ds_news_parser", from="src"}]
version = "0.0.1"
description = ""
authors = ["0xb1b1 <hello@axelreitenbach.online>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.6.1"
fastapi = {extras = ["all"], version = "^0.104.1"}
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
loguru = "^0.7.2"

[tool.poetry.scripts]
start = "ds_news_parser.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
